--- a/UI/Demo.ui
+++ b/UI/Demo.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>1396</width>
-    <height>878</height>
+    <height>933</height>
    </rect>
   </property>
   <property name="sizePolicy">
@@ -1097,14 +1097,23 @@
         <layout class="QVBoxLayout" name="verticalLayout">
          <item>
           <widget class="QStackedWidget" name="stackedWidget">
+           <property name="minimumSize">
+            <size>
+             <width>1000</width>
+             <height>820</height>
+            </size>
+           </property>
+           <property name="currentIndex">
+            <number>0</number>
+           </property>
            <widget class="QWidget" name="page">
             <widget class="QLabel" name="label_ADBexchange">
              <property name="geometry">
               <rect>
                <x>0</x>
-               <y>10</y>
+               <y>0</y>
                <width>1000</width>
-               <height>350</height>
+               <height>400</height>
               </rect>
              </property>
              <property name="sizePolicy">
@@ -1116,14 +1125,17 @@
              <property name="minimumSize">
               <size>
                <width>1000</width>
-               <height>350</height>
+               <height>400</height>
               </size>
              </property>
              <property name="maximumSize">
               <size>
                <width>1000</width>
-               <height>350</height>
+               <height>400</height>
               </size>
+             </property>
+             <property name="layoutDirection">
+              <enum>Qt::LeftToRight</enum>
              </property>
              <property name="autoFillBackground">
               <bool>false</bool>
@@ -1140,14 +1152,17 @@
              <property name="alignment">
               <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignTop</set>
              </property>
+             <property name="wordWrap">
+              <bool>false</bool>
+             </property>
             </widget>
-            <widget class="QGraphicsView" name="graphicsView">
+            <widget class="QLabel" name="label_showvideo">
              <property name="geometry">
               <rect>
                <x>0</x>
-               <y>10</y>
-               <width>1002</width>
-               <height>352</height>
+               <y>420</y>
+               <width>1000</width>
+               <height>400</height>
               </rect>
              </property>
              <property name="sizePolicy">
@@ -1156,61 +1171,96 @@
                <verstretch>0</verstretch>
               </sizepolicy>
              </property>
+             <property name="minimumSize">
+              <size>
+               <width>1000</width>
+               <height>400</height>
+              </size>
+             </property>
+             <property name="maximumSize">
+              <size>
+               <width>1000</width>
+               <height>400</height>
+              </size>
+             </property>
              <property name="autoFillBackground">
               <bool>false</bool>
              </property>
-             <property name="backgroundBrush">
-              <brush brushstyle="NoBrush">
-               <color alpha="0">
-                <red>0</red>
-                <green>0</green>
-                <blue>0</blue>
-               </color>
-              </brush>
-             </property>
-            </widget>
-           </widget>
-           <widget class="QWidget" name="page_2"/>
-          </widget>
-         </item>
-         <item>
-          <widget class="QLabel" name="label_showvideo">
-           <property name="sizePolicy">
-            <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
-             <horstretch>0</horstretch>
-             <verstretch>0</verstretch>
-            </sizepolicy>
-           </property>
-           <property name="minimumSize">
-            <size>
-             <width>1000</width>
-             <height>350</height>
-            </size>
-           </property>
-           <property name="maximumSize">
-            <size>
-             <width>1000</width>
-             <height>350</height>
-            </size>
-           </property>
-           <property name="autoFillBackground">
-            <bool>false</bool>
-           </property>
-           <property name="styleSheet">
-            <string notr="true">background-image: url(:/back/background.JPG);
+             <property name="styleSheet">
+              <string notr="true">background-image: url(:/back/background.JPG);
 background-position: center center;
 background-repeat: no-repeat;
 </string>
-           </property>
-           <property name="frameShape">
-            <enum>QFrame::Box</enum>
-           </property>
-           <property name="text">
-            <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;span style=&quot; font-weight:700; color:#aa007f;&quot;&gt;视觉识别显示区&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
-           </property>
-           <property name="alignment">
-            <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignTop</set>
-           </property>
+             </property>
+             <property name="frameShape">
+              <enum>QFrame::Box</enum>
+             </property>
+             <property name="text">
+              <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;span style=&quot; font-weight:700; color:#aa007f;&quot;&gt;视觉识别显示区&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+             </property>
+             <property name="alignment">
+              <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignTop</set>
+             </property>
+            </widget>
+            <widget class="QWidget" name="gridLayoutWidget">
+             <property name="geometry">
+              <rect>
+               <x>0</x>
+               <y>0</y>
+               <width>1004</width>
+               <height>404</height>
+              </rect>
+             </property>
+             <layout class="QGridLayout" name="gridLayout_4">
+              <item row="0" column="0">
+               <widget class="QGraphicsView" name="graphicsView">
+                <property name="sizePolicy">
+                 <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+                  <horstretch>0</horstretch>
+                  <verstretch>0</verstretch>
+                 </sizepolicy>
+                </property>
+                <property name="minimumSize">
+                 <size>
+                  <width>1000</width>
+                  <height>400</height>
+                 </size>
+                </property>
+                <property name="maximumSize">
+                 <size>
+                  <width>1000</width>
+                  <height>400</height>
+                 </size>
+                </property>
+                <property name="layoutDirection">
+                 <enum>Qt::LeftToRight</enum>
+                </property>
+                <property name="autoFillBackground">
+                 <bool>false</bool>
+                </property>
+                <property name="backgroundBrush">
+                 <brush brushstyle="NoBrush">
+                  <color alpha="0">
+                   <red>0</red>
+                   <green>0</green>
+                   <blue>0</blue>
+                  </color>
+                 </brush>
+                </property>
+                <property name="sceneRect">
+                 <rectf>
+                  <x>0.000000000000000</x>
+                  <y>0.000000000000000</y>
+                  <width>0.000000000000000</width>
+                  <height>0.000000000000000</height>
+                 </rectf>
+                </property>
+               </widget>
+              </item>
+             </layout>
+            </widget>
+           </widget>
+           <widget class="QWidget" name="page_2"/>
           </widget>
          </item>
          <item>
