--- a/UI/Demo.ui
+++ b/UI/Demo.ui
@@ -42,14 +42,17 @@
             <property name="minimumSize">
              <size>
               <width>0</width>
-              <height>30</height>
+              <height>50</height>
              </size>
             </property>
             <property name="maximumSize">
              <size>
               <width>16777215</width>
-              <height>30</height>
+              <height>50</height>
              </size>
+            </property>
+            <property name="styleSheet">
+             <string notr="true"/>
             </property>
             <property name="text">
              <string>启动视觉识别</string>
@@ -67,13 +70,13 @@
             <property name="minimumSize">
              <size>
               <width>0</width>
-              <height>30</height>
+              <height>50</height>
              </size>
             </property>
             <property name="maximumSize">
              <size>
               <width>16777215</width>
-              <height>30</height>
+              <height>50</height>
              </size>
             </property>
             <property name="text">
@@ -98,7 +101,7 @@
            </size>
           </property>
           <property name="currentIndex">
-           <number>2</number>
+           <number>0</number>
           </property>
           <widget class="QWidget" name="widget">
            <attribute name="title">
@@ -177,6 +180,18 @@
                <widget class="QLineEdit" name="lineEdit_inputvideo">
                 <property name="enabled">
                  <bool>true</bool>
+                </property>
+                <property name="minimumSize">
+                 <size>
+                  <width>0</width>
+                  <height>25</height>
+                 </size>
+                </property>
+                <property name="maximumSize">
+                 <size>
+                  <width>16777215</width>
+                  <height>25</height>
+                 </size>
                 </property>
                </widget>
               </item>
@@ -260,6 +275,27 @@
                  <property name="enabled">
                   <bool>true</bool>
                  </property>
+                 <property name="minimumSize">
+                  <size>
+                   <width>0</width>
+                   <height>25</height>
+                  </size>
+                 </property>
+                 <property name="maximumSize">
+                  <size>
+                   <width>16777215</width>
+                   <height>25</height>
+                  </size>
+                 </property>
+                 <property name="styleSheet">
+                  <string notr="true">.QLineEdit{
+
+border-radius:30%;
+
+border:1px solid black
+
+}</string>
+                 </property>
                 </widget>
                </item>
               </layout>
@@ -312,7 +348,7 @@
                <string notr="true">font: 9pt &quot;Microsoft YaHei UI&quot;;</string>
               </property>
               <property name="text">
-               <string>        crop_top_ratio：</string>
+               <string>           切割起始位置：</string>
               </property>
               <property name="frame">
                <bool>false</bool>
@@ -337,7 +373,7 @@
                <string notr="true">font: 9pt &quot;Microsoft YaHei UI&quot;;</string>
               </property>
               <property name="text">
-               <string>               crop_ratio：</string>
+               <string>                 切割比例：</string>
               </property>
               <property name="frame">
                <bool>false</bool>
@@ -384,7 +420,7 @@
                <string notr="true">font: 9pt &quot;Microsoft YaHei UI&quot;;</string>
               </property>
               <property name="text">
-               <string>           scaled_ratio：</string>
+               <string>                 缩放比例：</string>
               </property>
               <property name="frame">
                <bool>false</bool>
@@ -529,7 +565,7 @@
                <string notr="true">font: 9pt &quot;Microsoft YaHei UI&quot;;</string>
               </property>
               <property name="text">
-               <string>               Executor：</string>
+               <string>               线程数量：</string>
               </property>
               <property name="frame">
                <bool>false</bool>
@@ -875,9 +911,9 @@
            <widget class="QGroupBox" name="groupBox_7">
             <property name="geometry">
              <rect>
-              <x>10</x>
-              <y>30</y>
-              <width>271</width>
+              <x>20</x>
+              <y>70</y>
+              <width>311</width>
               <height>101</height>
              </rect>
             </property>
@@ -907,7 +943,7 @@
             <widget class="QSpinBox" name="spinBox_Skip_frames_2">
              <property name="geometry">
               <rect>
-               <x>200</x>
+               <x>230</x>
                <y>30</y>
                <width>61</width>
                <height>22</height>
@@ -917,7 +953,7 @@
             <widget class="QDoubleSpinBox" name="doubleSpinBox_crop_top_ratio_3">
              <property name="geometry">
               <rect>
-               <x>200</x>
+               <x>230</x>
                <y>60</y>
                <width>62</width>
                <height>22</height>
@@ -955,7 +991,7 @@
              </property>
              <property name="geometry">
               <rect>
-               <x>150</x>
+               <x>180</x>
                <y>30</y>
                <width>41</width>
                <height>21</height>
@@ -1005,7 +1041,7 @@
              </property>
              <property name="geometry">
               <rect>
-               <x>150</x>
+               <x>180</x>
                <y>60</y>
                <width>41</width>
                <height>21</height>
@@ -1028,22 +1064,22 @@
            <widget class="QPushButton" name="pushButton_original_video">
             <property name="geometry">
              <rect>
-              <x>10</x>
-              <y>250</y>
-              <width>141</width>
-              <height>111</height>
+              <x>60</x>
+              <y>330</y>
+              <width>231</width>
+              <height>51</height>
              </rect>
             </property>
             <property name="text">
-             <string>打开原始画面</string>
+             <string>打开原始视频画面</string>
             </property>
            </widget>
            <widget class="QPushButton" name="pushButton_ADBshow">
             <property name="geometry">
              <rect>
-              <x>180</x>
-              <y>310</y>
-              <width>151</width>
+              <x>60</x>
+              <y>450</y>
+              <width>231</width>
               <height>51</height>
              </rect>
             </property>
@@ -1077,14 +1113,43 @@
            <widget class="QPushButton" name="pushButton_lighting_on">
             <property name="geometry">
              <rect>
-              <x>180</x>
-              <y>250</y>
-              <width>151</width>
+              <x>60</x>
+              <y>390</y>
+              <width>231</width>
               <height>51</height>
              </rect>
             </property>
             <property name="text">
              <string>Lighting ON</string>
+            </property>
+           </widget>
+           <widget class="QRadioButton" name="radioButton">
+            <property name="geometry">
+             <rect>
+              <x>10</x>
+              <y>210</y>
+              <width>251</width>
+              <height>19</height>
+             </rect>
+            </property>
+            <property name="text">
+             <string>Micro LED</string>
+            </property>
+            <property name="checked">
+             <bool>true</bool>
+            </property>
+           </widget>
+           <widget class="QRadioButton" name="radioButton_2">
+            <property name="geometry">
+             <rect>
+              <x>10</x>
+              <y>30</y>
+              <width>251</width>
+              <height>19</height>
+             </rect>
+            </property>
+            <property name="text">
+             <string>Matrix LED</string>
             </property>
            </widget>
           </widget>
@@ -1202,62 +1267,56 @@ background-repeat: no-repeat;
               <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignTop</set>
              </property>
             </widget>
-            <widget class="QWidget" name="gridLayoutWidget">
+            <widget class="QGraphicsView" name="graphicsView">
              <property name="geometry">
               <rect>
                <x>0</x>
                <y>0</y>
-               <width>1004</width>
-               <height>404</height>
+               <width>1000</width>
+               <height>400</height>
               </rect>
              </property>
-             <layout class="QGridLayout" name="gridLayout_4">
-              <item row="0" column="0">
-               <widget class="QGraphicsView" name="graphicsView">
-                <property name="sizePolicy">
-                 <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
-                  <horstretch>0</horstretch>
-                  <verstretch>0</verstretch>
-                 </sizepolicy>
-                </property>
-                <property name="minimumSize">
-                 <size>
-                  <width>1000</width>
-                  <height>400</height>
-                 </size>
-                </property>
-                <property name="maximumSize">
-                 <size>
-                  <width>1000</width>
-                  <height>400</height>
-                 </size>
-                </property>
-                <property name="layoutDirection">
-                 <enum>Qt::LeftToRight</enum>
-                </property>
-                <property name="autoFillBackground">
-                 <bool>false</bool>
-                </property>
-                <property name="backgroundBrush">
-                 <brush brushstyle="NoBrush">
-                  <color alpha="0">
-                   <red>0</red>
-                   <green>0</green>
-                   <blue>0</blue>
-                  </color>
-                 </brush>
-                </property>
-                <property name="sceneRect">
-                 <rectf>
-                  <x>0.000000000000000</x>
-                  <y>0.000000000000000</y>
-                  <width>0.000000000000000</width>
-                  <height>0.000000000000000</height>
-                 </rectf>
-                </property>
-               </widget>
-              </item>
-             </layout>
+             <property name="sizePolicy">
+              <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+               <horstretch>0</horstretch>
+               <verstretch>0</verstretch>
+              </sizepolicy>
+             </property>
+             <property name="minimumSize">
+              <size>
+               <width>1000</width>
+               <height>400</height>
+              </size>
+             </property>
+             <property name="maximumSize">
+              <size>
+               <width>1000</width>
+               <height>400</height>
+              </size>
+             </property>
+             <property name="layoutDirection">
+              <enum>Qt::LeftToRight</enum>
+             </property>
+             <property name="autoFillBackground">
+              <bool>false</bool>
+             </property>
+             <property name="backgroundBrush">
+              <brush brushstyle="NoBrush">
+               <color alpha="0">
+                <red>0</red>
+                <green>0</green>
+                <blue>0</blue>
+               </color>
+              </brush>
+             </property>
+             <property name="sceneRect">
+              <rectf>
+               <x>0.000000000000000</x>
+               <y>0.000000000000000</y>
+               <width>0.000000000000000</width>
+               <height>0.000000000000000</height>
+              </rectf>
+             </property>
             </widget>
            </widget>
            <widget class="QWidget" name="page_2"/>
